@@ -1,8 +1,8 @@
 package co.rsk.peg.federation;
 
-import static co.rsk.bitcoinj.script.Script.MAX_SCRIPT_ELEMENT_SIZE;
 import static co.rsk.peg.bitcoin.RedeemScriptCreationException.Reason.INVALID_CSV_VALUE;
-import static co.rsk.peg.bitcoin.ScriptCreationException.Reason.ABOVE_MAX_SCRIPT_ELEMENT_SIZE;
+import static co.rsk.peg.bitcoin.ScriptCreationException.Reason.ABOVE_MAX_SCRIPTSIG_ELEMENT_SIZE;
+import static co.rsk.peg.bitcoin.ScriptValidations.MAX_P2SH_REDEEM_SCRIPT_SIZE;
 import static co.rsk.peg.federation.ErpFederationCreationException.Reason.NULL_OR_EMPTY_EMERGENCY_KEYS;
 import static co.rsk.peg.federation.ErpFederationCreationException.Reason.REDEEM_SCRIPT_CREATION_FAILED;
 import static org.junit.jupiter.api.Assertions.*;
@@ -26,7 +26,6 @@ import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.stream.Collectors;
 import org.bouncycastle.util.encoders.Hex;
 import org.ethereum.config.blockchain.upgrades.ActivationConfig;
 import org.ethereum.config.blockchain.upgrades.ActivationConfigsForTest;
@@ -61,12 +60,10 @@ class NonStandardErpFederationsTest {
         BtcECKey federator6PublicKey = BtcECKey.fromPublicOnly(Hex.decode("0340df69f28d69eef60845da7d81ff60a9060d4da35c767f017b0dd4e20448fb44"));
         BtcECKey federator7PublicKey = BtcECKey.fromPublicOnly(Hex.decode("02ac1901b6fba2c1dbd47d894d2bd76c8ba1d296d65f6ab47f1c6b22afb53e73eb"));
         BtcECKey federator8PublicKey = BtcECKey.fromPublicOnly(Hex.decode("031aabbeb9b27258f98c2bf21f36677ae7bae09eb2d8c958ef41a20a6e88626d26"));
-        BtcECKey federator9PublicKey = BtcECKey.fromPublicOnly(Hex.decode("0245ef34f5ee218005c9c21227133e8568a4f3f11aeab919c66ff7b816ae1ffeea"));
         defaultKeys = Arrays.asList(
             federator0PublicKey, federator1PublicKey, federator2PublicKey,
             federator3PublicKey, federator4PublicKey, federator5PublicKey,
-            federator6PublicKey, federator7PublicKey, federator8PublicKey,
-            federator9PublicKey
+            federator6PublicKey, federator7PublicKey, federator8PublicKey
         );
         defaultThreshold = defaultKeys.size() / 2 + 1;
         emergencyKeys = federationMainNetConstants.getErpFedPubKeysList();
@@ -84,8 +81,18 @@ class NonStandardErpFederationsTest {
         Instant creationTime = ZonedDateTime.parse("2017-06-10T02:30:00Z").toInstant();
         long creationBlockNumber = 0L;
 
-        FederationArgs federationArgs = new FederationArgs(standardMembers, creationTime, creationBlockNumber, networkParameters);
-        return FederationFactory.buildNonStandardErpFederation(federationArgs, emergencyKeys, activationDelayValue, activations);
+        FederationArgs federationArgs = new FederationArgs(
+            standardMembers,
+            creationTime,
+            creationBlockNumber,
+            networkParameters
+        );
+        return FederationFactory.buildNonStandardErpFederation(
+            federationArgs,
+            emergencyKeys,
+            activationDelayValue,
+            activations
+        );
     }
 
     @Test
@@ -189,14 +196,22 @@ class NonStandardErpFederationsTest {
 
         activationDelayValue = csvValue;
 
-        nonStandardErpFederation = createDefaultNonStandardErpFederation();
         ErpFederationCreationException fedException = assertThrows(
             ErpFederationCreationException.class,
-            () -> nonStandardErpFederation.getRedeemScript());
+            this::createDefaultNonStandardErpFederation);
         assertEquals(REDEEM_SCRIPT_CREATION_FAILED, fedException.getReason());
+    }
+
+    @ParameterizedTest
+    @ValueSource(longs = {-100L, 0L, ErpRedeemScriptBuilderUtils.MAX_CSV_VALUE + 1, 100_000L, 8_400_000L })
+    void of_postRSKIP293_withInvalidCsvValues_throwsErpFederationCreationException(long csvValue) {
+        when(activations.isActive(ConsensusRule.RSKIP284)).thenReturn(true);
+        when(activations.isActive(ConsensusRule.RSKIP293)).thenReturn(true);
+
+        activationDelayValue = csvValue;
 
         // Check the builder throws the particular expected exception
-        ErpRedeemScriptBuilder builder = nonStandardErpFederation.getErpRedeemScriptBuilder();
+        ErpRedeemScriptBuilder builder = NonStandardErpRedeemScriptBuilderFactory.getNonStandardErpRedeemScriptBuilder(activations, networkParameters);
         RedeemScriptCreationException exception = assertThrows(
             RedeemScriptCreationException.class,
             () -> builder.of(
@@ -227,7 +242,7 @@ class NonStandardErpFederationsTest {
                 activationDelayValue
             )
         );
-        assertEquals(ABOVE_MAX_SCRIPT_ELEMENT_SIZE, exception.getReason());
+        assertEquals(ABOVE_MAX_SCRIPTSIG_ELEMENT_SIZE, exception.getReason());
     }
 
     @Test
@@ -245,7 +260,7 @@ class NonStandardErpFederationsTest {
         assertEquals(nonStandardErpFederation, nonStandardErpFederation);
 
         assertNotEquals(null, nonStandardErpFederation);
-        assertNotEquals(nonStandardErpFederation, new Object());
+        assertNotEquals(new Object(), nonStandardErpFederation);
         assertNotEquals("something else", nonStandardErpFederation);
     }
 
@@ -578,7 +593,7 @@ class NonStandardErpFederationsTest {
             "025a2f522aea776fab5241ad72f7f05918e8606676461cb6ce38265a52d4ca9ed6",
             "02afc230c2d355b1a577682b07bc2646041b5d0177af0f98395a46018da699b6da",
             "0344a3c38cd59afcba3edcebe143e025574594b001700dec41e59409bdbd0f2a09",
-        }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).collect(Collectors.toList());
+        }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).toList();
         String expectedProgram = "a91412d5d2996618c8abcb1e6fc17be3cd8e2790c25f87";
         Address expectedAddress = Address.fromBase58(networkParameters, "2MtxpJPt2xCa3AyFYUjTT7Aop9Z6gGf4rqA");
 
@@ -600,7 +615,7 @@ class NonStandardErpFederationsTest {
         // Public keys used for creating nonStandardErpFederation, but uncompressed format now
         emergencyKeys = emergencyKeys.stream()
             .map(BtcECKey::decompress)
-            .collect(Collectors.toList());
+            .toList();
 
         // Recreate nonStandardErpFederation
         ErpFederation federationWithUncompressedKeys = createDefaultNonStandardErpFederation();
@@ -623,7 +638,7 @@ class NonStandardErpFederationsTest {
         RawGeneratedRedeemScript[] generatedScripts = new ObjectMapper().readValue(rawRedeemScripts, RawGeneratedRedeemScript[].class);
         for (RawGeneratedRedeemScript generatedScript : generatedScripts) {
             // Skip test cases with invalid redeem script that exceed the maximum size
-            if (generatedScript.script.getProgram().length <= MAX_SCRIPT_ELEMENT_SIZE) {
+            if (generatedScript.script.getProgram().length <= MAX_P2SH_REDEEM_SCRIPT_SIZE) {
                 networkParameters = NetworkParameters.fromID(NetworkParameters.ID_TESTNET);
                 defaultKeys = generatedScript.mainFed;
                 emergencyKeys = generatedScript.emergencyFed;
@@ -715,7 +730,7 @@ class NonStandardErpFederationsTest {
         when(activations.isActive(ConsensusRule.RSKIP284)).thenReturn(false);
         nonStandardErpFederation = createDefaultNonStandardErpFederation();
 
-        assertEquals(TestConstants.ERP_TESTNET_REDEEM_SCRIPT, nonStandardErpFederation.getRedeemScript());
+        assertEquals(TestConstants.NON_STANDARD_ERP_REDEEM_SCRIPT_HARDCODED, nonStandardErpFederation.getRedeemScript());
     }
 
     @Test
@@ -723,7 +738,7 @@ class NonStandardErpFederationsTest {
         when(activations.isActive(ConsensusRule.RSKIP284)).thenReturn(false);
         nonStandardErpFederation = createDefaultNonStandardErpFederation();
 
-        assertNotEquals(TestConstants.ERP_TESTNET_REDEEM_SCRIPT, nonStandardErpFederation.getRedeemScript());
+        assertNotEquals(TestConstants.NON_STANDARD_ERP_REDEEM_SCRIPT_HARDCODED, nonStandardErpFederation.getRedeemScript());
         validateErpRedeemScript(
             nonStandardErpFederation.getRedeemScript(),
             activationDelayValue
@@ -739,7 +754,7 @@ class NonStandardErpFederationsTest {
 
         ErpRedeemScriptBuilder builder = nonStandardErpFederation.getErpRedeemScriptBuilder();
         assertInstanceOf(NonStandardErpRedeemScriptBuilderWithCsvUnsignedBE.class, builder);
-        assertNotEquals(TestConstants.ERP_TESTNET_REDEEM_SCRIPT, nonStandardErpFederation.getRedeemScript());
+        assertNotEquals(TestConstants.NON_STANDARD_ERP_REDEEM_SCRIPT_HARDCODED, nonStandardErpFederation.getRedeemScript());
 
         validateErpRedeemScript(
             nonStandardErpFederation.getRedeemScript(),
@@ -754,7 +769,7 @@ class NonStandardErpFederationsTest {
         // check the hardcoded fed didnt exist on mainnet after rskip201
         nonStandardErpFederation = createDefaultNonStandardErpFederation();
         builder = nonStandardErpFederation.getErpRedeemScriptBuilder();
-        assertNotEquals(TestConstants.ERP_TESTNET_REDEEM_SCRIPT, nonStandardErpFederation.getRedeemScript());
+        assertNotEquals(TestConstants.NON_STANDARD_ERP_REDEEM_SCRIPT_HARDCODED, nonStandardErpFederation.getRedeemScript());
         assertFalse(builder instanceof NonStandardErpRedeemScriptBuilderHardcoded);
 
         // check the hardcoded fed didnt exist on mainnet after rskip284
@@ -773,20 +788,20 @@ class NonStandardErpFederationsTest {
     void testEquals_differentRedeemScript() {
         networkParameters = NetworkParameters.fromID(NetworkParameters.ID_TESTNET);
 
+        Federation testnetNonStandardErpFederation = createDefaultNonStandardErpFederation();
         // Both federations created before RSKIP284 with the same data, should have the same redeem script
         when(activations.isActive(ConsensusRule.RSKIP284)).thenReturn(false);
-        ErpFederation nonStandardErpFederation = createDefaultNonStandardErpFederation();
         Federation otherErpFederation = createDefaultNonStandardErpFederation();
-        assertEquals(nonStandardErpFederation, otherErpFederation);
+        assertEquals(testnetNonStandardErpFederation, otherErpFederation);
 
         // One nonStandardErpFederation created after RSKIP284 with the same data, should have different redeem script
         when(activations.isActive(ConsensusRule.RSKIP284)).thenReturn(true);
         otherErpFederation = createDefaultNonStandardErpFederation();
-        assertNotEquals(nonStandardErpFederation, otherErpFederation);
+        assertNotEquals(testnetNonStandardErpFederation, otherErpFederation);
 
         // The other nonStandardErpFederation created after RSKIP284 with the same data, should have same redeem script
-        nonStandardErpFederation = createDefaultNonStandardErpFederation();
-        assertEquals(nonStandardErpFederation, otherErpFederation);
+        testnetNonStandardErpFederation = createDefaultNonStandardErpFederation();
+        assertEquals(testnetNonStandardErpFederation, otherErpFederation);
     }
 
     @Disabled("Can't recreate the hardcoded redeem script since the needed CSV value is above the max. Keeping the test ignored as testimonial")
@@ -804,13 +819,13 @@ class NonStandardErpFederationsTest {
             "02afc230c2d355b1a577682b07bc2646041b5d0177af0f98395a46018da699b6da",
             "0344a3c38cd59afcba3edcebe143e025574594b001700dec41e59409bdbd0f2a09",
             "039a060badbeb24bee49eb2063f616c0f0f0765d4ca646b20a88ce828f259fcdb9"
-        }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).sorted(BtcECKey.PUBKEY_COMPARATOR).collect(Collectors.toList());
+        }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).sorted(BtcECKey.PUBKEY_COMPARATOR).toList();
 
         List<BtcECKey> emergencyMultisigKeys = Arrays.stream(new String[]{
             "0216c23b2ea8e4f11c3f9e22711addb1d16a93964796913830856b568cc3ea21d3",
             "0275562901dd8faae20de0a4166362a4f82188db77dbed4ca887422ea1ec185f14",
             "034db69f2112f4fb1bb6141bf6e2bd6631f0484d0bd95b16767902c9fe219d4a6f"
-        }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).sorted(BtcECKey.PUBKEY_COMPARATOR).collect(Collectors.toList());
+        }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).sorted(BtcECKey.PUBKEY_COMPARATOR).toList();
 
         long activationDelay = 5_295_360L;
 
@@ -818,7 +833,12 @@ class NonStandardErpFederationsTest {
         Instant creationTime = ZonedDateTime.parse("2017-06-10T02:30:00Z").toInstant();
         FederationArgs federationArgs = new FederationArgs(federationMembersWithBtcKeys, creationTime, 1, btcParams);
 
-        assertThrows(ErpFederationCreationException.class, () -> FederationFactory.buildNonStandardErpFederation(federationArgs, emergencyMultisigKeys, activationDelay, activations));
+        assertThrows(ErpFederationCreationException.class, () -> FederationFactory.buildNonStandardErpFederation(
+            federationArgs,
+            emergencyMultisigKeys,
+            activationDelay,
+            activations
+        ));
     }
 
     @Test
@@ -976,7 +996,7 @@ class NonStandardErpFederationsTest {
         boolean signWithEmergencyMultisig) {
 
         defaultKeys = BitcoinTestUtils.getBtcEcKeysFromSeeds(
-            new String[]{"fed1", "fed2", "fed3", "fed4", "fed5", "fed6", "fed7", "fed8", "fed9", "fed10"},
+            new String[]{"fed1", "fed2", "fed3", "fed4", "fed5", "fed6", "fed7", "fed8", "fed9"},
             true
         );
 
@@ -1082,7 +1102,7 @@ class NonStandardErpFederationsTest {
             assertEquals(serializedCsvValue[i], script[index++]);
         }
 
-        assertEquals(Integer.valueOf(ScriptOpCodes.OP_CHECKSEQUENCEVERIFY).byteValue(), script[index++]);
+        assertEquals((byte) ScriptOpCodes.OP_CHECKSEQUENCEVERIFY, script[index++]);
         assertEquals(ScriptOpCodes.OP_DROP, script[index++]);
 
         // Next byte should equal M, from an M/N multisig
@@ -1091,7 +1111,7 @@ class NonStandardErpFederationsTest {
 
         for (BtcECKey key: emergencyMultisigKeys) {
             byte[] pubkey = key.getPubKey();
-            assertEquals(Integer.valueOf(pubkey.length).byteValue(), script[index++]);
+            assertEquals(pubkey.length, script[index++]);
             for (byte b : pubkey) {
                 assertEquals(b, script[index++]);
             }
@@ -1102,7 +1122,7 @@ class NonStandardErpFederationsTest {
         assertEquals(ScriptOpCodes.getOpCode(String.valueOf(n)), script[index++]);
 
         assertEquals(ScriptOpCodes.OP_ENDIF, script[index++]);
-        assertEquals(Integer.valueOf(ScriptOpCodes.OP_CHECKMULTISIG).byteValue(), script[index]);
+        assertEquals((byte) ScriptOpCodes.OP_CHECKMULTISIG, script[index]);
     }
 
     private static class RawGeneratedRedeemScript {
@@ -1123,7 +1143,7 @@ class NonStandardErpFederationsTest {
         }
 
         private List<BtcECKey> parseFed(List<String> fed) {
-            return fed.stream().map(Hex::decode).map(BtcECKey::fromPublicOnly).collect(Collectors.toList());
+            return fed.stream().map(Hex::decode).map(BtcECKey::fromPublicOnly).toList();
         }
     }
 }
